[Progress] First fields. -Create ProductsFragment with your viewModel. -Create xmls for animations. -Add navigation support.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProductsToPay</string>
+    <string name="label_products">Products to pay</string>
 </resources>
