[Feat] Add productPurchasedFragment to menu nav. -Modified deep link setting uri to https. -Show field tpaga_payment_url in browser, when response is ok.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ProductsToPay</string>
     <string name="label_products">Products to pay</string>
+    <string name="titleProductPurchasedFragment">Product purchased</string>
 </resources>
