[Progress] Cache implementation. -Create class cache for save reactive objects. -Set dependency cache to repository. -Move observers to onCreate method in fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ProductsToPay</string>
     <string name="label_products">Products to pay</string>
     <string name="titleProductPurchasedFragment">Product purchased</string>
+    <string name="error_message_order_pending">Tienes una órden pendiente con este producto.</string>
 </resources>
